--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "chart.js": "^4.5.0",
     "fluent-ffmpeg": "^2.1.3",
     "leaflet": "^1.9.4",
-    "next": "15.4.4",
+    "next": "^16.1.6",
     "ol": "^10.6.1",
-    "react": "^19.1.1",
+    "react": "^19.2.4",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.4",
     "react-draggable": "^4.5.0",
     "react-leaflet": "^5.0.0",
     "react-swipeable": "^7.0.2",
